# MiJuegoAndroid

./: settings.gradle
.github/workflows/: build_apk.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
